maj pour le plaisir

--- a/resources/[others]/rabtor_simple_loadingscreen/index.html
+++ b/resources/[others]/rabtor_simple_loadingscreen/index.html
@@ -35,10 +35,10 @@
 	          		 <p class="text">Ne pas freepunch.</p>
 	           		 <p class="text">Ne pas abuser de votre travail.</p>
 	           		 <p class="text">Ne pas spawnkill !</p>
-	          		 <p class="text">Ne pas utiliser un nom comme "RAZOR ou CALIBAN".</p>
+	          		 <p class="text">Ne pas utiliser un nom comme "RAZOR", "CALIBAN" ou "Batman/Bruce Wayne".</p>
 	         		 <p class="text">Respectez le Staff et les autres joueurs.</p>
 	         		 <p class="text">Discord obligatoire.</p>
-	         		 <p class="text">Nom RP Via Steam Obligatoire.</p>
+	         		 <p class="text">Nom et Prénom RP Via Steam Obligatoire.</p>
 					</center>
         </div>
  
